--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "सफलतापूर्वक अद्यतन सेटिंग्स"
   },
-  "Better_previews_options": {
-    "message": "बेहतर पूर्वावलोकन विकल्प"
+  "Search__amp__Link_Preview_Options": {
+    "message": "खोज & amp; लिंक पूर्वावलोकन विकल्प"
   },
   "Show_Sample_Preview": {
     "message": "नमूना पूर्वावलोकन दिखाएं"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "मामले की रिपोर्ट करें"
   }
 }
