--- a/src/_locales/am/messages.json
+++ b/src/_locales/am/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "በተሳካ ሁኔታ ወቅታዊ ቅንብሮች"
   },
-  "Better_previews_options": {
-    "message": "የተሻሉ ቅድመ-እይታዎች አማራጮች"
+  "Search__amp__Link_Preview_Options": {
+    "message": "ፈልግ እና አዶ, የአገናኝ ቅድመ-እይታ አማራጮች"
   },
   "Show_Sample_Preview": {
     "message": "የናሙና ቅድመ ዕይታ ያሳዩ"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "አንድ ጉዳይ ሪፖርት ያድርጉ"
   }
 }
