--- a/src/_locales/gu/messages.json
+++ b/src/_locales/gu/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "સફળતાપૂર્વક અપડેટ સેટિંગ્સ"
   },
-  "Better_previews_options": {
-    "message": "વધુ સારા પૂર્વાવલોકનો વિકલ્પો"
+  "Search__amp__Link_Preview_Options": {
+    "message": "શોધ & amp; લિંક પૂર્વાવલોકન વિકલ્પો"
   },
   "Show_Sample_Preview": {
     "message": "નમૂના પૂર્વાવલોકન બતાવો"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "એક મુદ્દો જાણ કરો"
   }
 }
