--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "Impostazioni aggiornate correttamente"
   },
-  "Better_previews_options": {
-    "message": "Migliore opzioni di anteprime"
+  "Search__amp__Link_Preview_Options": {
+    "message": "Search & amp; Opzioni di anteprima del collegamento"
   },
   "Show_Sample_Preview": {
     "message": "Mostra l'anteprima del campione"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "Segnala un problema"
   }
 }
