--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "설정을 성공적으로 업데이트했습니다"
   },
-  "Better_previews_options": {
-    "message": "더 나은 옵션을 미리 봅니다"
+  "Search__amp__Link_Preview_Options": {
+    "message": "검색 & amp; 링크 미리보기 옵션"
   },
   "Show_Sample_Preview": {
     "message": "샘플 미리보기 표시"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "문제를보고하십시오"
   }
 }
