--- a/src/_locales/lt/messages.json
+++ b/src/_locales/lt/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "Sėkmingai atnaujinti nustatymai"
   },
-  "Better_previews_options": {
-    "message": "Geresnės peržiūros parinktys"
+  "Search__amp__Link_Preview_Options": {
+    "message": "Paieška & amp; Nuorodų peržiūros parinktys"
   },
   "Show_Sample_Preview": {
     "message": "Rodyti pavyzdžių peržiūrą"
   },
-  "Report_an_issue": {
-    "message": "Pranešti apie klausimą"
+  "Report_an_Issue": {
+    "message": "Pranešti apie problemą"
   }
 }
