--- a/src/_locales/ml/messages.json
+++ b/src/_locales/ml/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "ക്രമീകരണങ്ങൾ വിജയകരമായി അപ്ഡേറ്റുചെയ്തു"
   },
-  "Better_previews_options": {
-    "message": "ഓപ്ഷനുകൾ മികച്ച പ്രിവ്യൂ ചെയ്യുന്നു"
+  "Search__amp__Link_Preview_Options": {
+    "message": "തിരയുക & amp; ലിങ്ക് പ്രിവ്യൂ ഓപ്ഷനുകൾ"
   },
   "Show_Sample_Preview": {
     "message": "സാമ്പിൾ പ്രിവ്യൂ കാണിക്കുക"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "ഒരു പ്രശ്നം റിപ്പോർട്ടുചെയ്യുക"
   }
 }
