--- a/src/_locales/th/messages.json
+++ b/src/_locales/th/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "อัปเดตการตั้งค่าสำเร็จ"
   },
-  "Better_previews_options": {
-    "message": "ตัวเลือกตัวอย่างที่ดีกว่า"
+  "Search__amp__Link_Preview_Options": {
+    "message": "ค้นหา & amp; ตัวเลือกตัวอย่างลิงก์"
   },
   "Show_Sample_Preview": {
     "message": "แสดงตัวอย่างตัวอย่าง"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "รายงานปัญหา"
   }
 }
