--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -110,13 +110,13 @@
   "Successfully_updated_settings": {
     "message": "成功更新了設置"
   },
-  "Better_previews_options": {
-    "message": "更好的預覽選項"
+  "Search__amp__Link_Preview_Options": {
+    "message": "搜索＆amp; 鏈接預覽選項"
   },
   "Show_Sample_Preview": {
     "message": "顯示樣本預覽"
   },
-  "Report_an_issue": {
+  "Report_an_Issue": {
     "message": "報告一個問題"
   }
 }
